[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/npcs/NPCAgent3D.gd" id="1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
height = 2.0
radius = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
height = 2.0
radius = 0.3

[node name="NPCAgent3D" type="CharacterBody3D"]
script = ExtResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 4.0
path_max_distance = 6.0
avoidance_enabled = true
radius = 2.0
height = 2.0

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Eyes" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.3)

[node name="SelectionIndicator" type="Node3D" parent="."]
visible = false

[node name="SelectionRing" type="MeshInstance3D" parent="SelectionIndicator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)

[node name="UI" type="Node3D" parent="."]

[node name="HealthBar3D" type="MeshInstance3D" parent="UI"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)

[node name="StateLabel3D" type="Label3D" parent="UI"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, 0)
text = "3D"
horizontal_alignment = 1